Fix warning printed at test time